--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,25 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none;  /* Safari and Chrome */
 }
+
+/* Menu item hover effect using CSS custom properties - only when hoverColor is provided */
+.has-hover-color .menu-item:hover {
+  color: var(--menu-item-hover-color) !important;
+}
+
+/* Ensure hover works for all menu item types - only when hoverColor is provided */
+.has-hover-color .menu-item button:hover,
+.has-hover-color .menu-item a:hover,
+.has-hover-color .menu-item span:hover {
+  color: var(--menu-item-hover-color) !important;
+}
+
+/* More specific selectors for nested elements - only when hoverColor is provided */
+.has-hover-color .menu-item:hover * {
+  color: var(--menu-item-hover-color) !important;
+}
+
+/* Ensure dropdown arrows also change color on hover - only when hoverColor is provided */
+.has-hover-color .menu-item:hover svg {
+  color: var(--menu-item-hover-color) !important;
+}
